Add test for FollowHandler's addFollow

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\Unit\\": "tests/unit/"
         }
     },
     "replace": {
@@ -98,6 +98,7 @@
         }
     },
     "require-dev": {
+        "mockery/mockery": "^1.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
